<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ISYController</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="titleString">ISYController</string>
    <string name="connectButton">Connect</string>
    <string name="configureButton">Configure</string>
    <string name="quitButton">Quit</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="queryButton">Query</string>
    <string name="onButton">Turn On</string>
    <string name="offButton">Turn Off</string>
    <string name="pref_server">Server Settings</string>
	<string name="pref_server_name">ISY REST Path</string>
	<string name="pref_server_name_hint">http://isy994-ems/rest</string>
	<string name="pref_server_name_summary">Enter the FQDN of the Server</string>
	<string name="pref_use_https">Use HTTPS</string>
	<string name="pref_use_https_summary">Should SSL sockets be used for connection</string>
	<string name="pref_login">Login</string>
	<string name="pref_user_name">Username</string>
	<string name="pref_user_name_summary">The username for the ISY</string>
	<string name="pref_password">Password</string>
	<string name="pref_password_summary">The password for the ISY</string>
	<string name="iconDescription">Type Logo</string>
	<string name="pref_reset_db">Reset DB on Start</string>
	<string name="pref_reset_db_summary">This will dump the database values when the application is loaded.</string>
	<string name="disableButton">Disable</string>
	<string name="disableRunAtStartButton">Disable Run at Start</string>
	<string name="enableButton">Enable</string>
	<string name="enableRunAtStartButton">Enable Run at Start</string>
	<string name="refreshButton">Refresh Data</string>
	<string name="runButton">Run</string>
	<string name="runElseButton">Run Else</string>
	<string name="runThenButton">Run Then</string>
	<string name="stopButton">Stop</string>
	<string name="statusLabel">Status</string>
	<string name="enabledLabel">Enabled</string>
	<string name="runAtStartupLabel">Run at Startup</string>
	<string name="runningLabel">Running</string>
	<string name="lastRunTimeLabel">Last Run Time</string>
	<string name="lastFinishTimeLabel">Last Finish Time</string>
	<string name="currentValue">Current Value:</string>
	<string name="initValue">Init Value:</string>
	<string name="lastChangedLabel">Last Changed:</string>
	<string name="setNewValueButton">Set New Value</string>
	<string name="pref_use_custom_ssl">Allow Unsigned SSL Certificate</string>
	<string name="pref_use_custom_ssl_summary">This allows connecting directly to the ISY with https</string>
</resources>
