<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".StartPageActivity" >

    <TextView
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:textStyle="bold" />

	<View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:paddingBottom="200dp"
	    android:background="@android:color/darker_gray"/>
	<TextView 
	    android:id="@+id/addressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />
	<LinearLayout 
	    android:baselineAligned="false"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
		<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:orientation="vertical"
		    >
		    <TextView
		        android:id="@+id/statusLabel"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="@string/statusLabel"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <TextView
		        android:id="@+id/statusText"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text=""
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textSize="18sp"
		        android:textStyle="bold" />
		</LinearLayout>
	    <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:orientation="vertical"
		    >
		    <TextView
		        android:id="@+id/enabedLabel"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="@string/enabledLabel"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <TextView
		        android:id="@+id/enabledText"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text=""
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textSize="18sp"
		        android:textStyle="bold" />
			    
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:orientation="vertical"
		    >
		    <TextView
		        android:id="@+id/runAtStartupLabel"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="@string/runAtStartupLabel"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
		    <TextView
		        android:id="@+id/runAtStartupText"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text=""
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textSize="18sp"
		        android:textStyle="bold" />
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:orientation="vertical"
		    >
		    <TextView
		        android:id="@+id/runningLabel"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="@string/runningLabel"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <TextView
		        android:id="@+id/runningText"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text=""
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textSize="18sp"
		        android:textStyle="bold" />
		    
		</LinearLayout>
	</LinearLayout>
	<LinearLayout 
	    android:baselineAligned="false"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:padding="10dp"
	    >
		<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:orientation="vertical"
		    >
		    <TextView
		        android:id="@+id/lastRunTimeLabel"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="@string/lastRunTimeLabel"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <TextView
		        android:id="@+id/lastRunTimeText"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text=""
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textSize="18sp"
		        android:textStyle="bold" />
		</LinearLayout>
	    <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:orientation="vertical"
		    >
		    <TextView
		        android:id="@+id/lastEndTimeLabel"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="@string/lastFinishTimeLabel"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <TextView
		        android:id="@+id/lastEndTimeText"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text=""
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textSize="18sp"
		        android:textStyle="bold" />
			    
		</LinearLayout>
		
	</LinearLayout>
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"/>
	
    <Button
        android:id="@+id/refreshButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/refreshButton"
        android:onClick="refreshData"/>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <Button
	        android:id="@+id/runButton"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/runButton"
	        android:onClick="runProgram"/>
	    <Button
	        android:id="@+id/stopButton"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/stopButton"
	        android:onClick="stopProgram"/>	
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <Button
	        android:id="@+id/runThenButton"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/runThenButton"
	        android:onClick="runThenProgram"/>
	    <Button
	        android:id="@+id/runElseButton"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/runElseButton"
	        android:onClick="runElseProgram"/>	
	</LinearLayout>
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <Button
	        android:id="@+id/enableButton"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/enableButton"
	        android:onClick="enableProgram"/>
	    <Button
	        android:id="@+id/disableButton"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/disableButton"
	        android:onClick="disableProgram"/>	
	</LinearLayout>
	
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <Button
	        android:id="@+id/enableRunAtStartButton"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/enableRunAtStartButton"
	        android:onClick="enableRunAtStartProgram"/>
	    <Button
	        android:id="@+id/disableRunAtStartButton"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/disableRunAtStartButton"
	        android:onClick="disableRunAtStartProgram"/>	
	</LinearLayout>
</LinearLayout>
</ScrollView>