<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".StartPageActivity" >

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleString"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize = "40sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:paddingBottom="200dp"
	    android:background="@android:color/darker_gray"/>

	<View
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"/>
	<TextView
        android:id="@+id/statusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center"
        android:textStyle=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

	<View
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"/>
    <Button
        android:id="@+id/connectButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/connectButton"
        android:onClick="connectToISY"/>
    <Button
        android:id="@+id/configureButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/configureButton"
        android:onClick="configureISY"/>
    <Button
        android:id="@+id/quitButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/quitButton"
        android:onClick="quit"/>
    
</LinearLayout>
