<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".StartPageActivity" >

    <TextView
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp"
        android:textStyle="bold" />

	<View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:paddingBottom="200dp"
	    android:background="@android:color/darker_gray"/>
	<TextView 
	    android:id="@+id/addressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="2"
	    android:padding="5dp"
	    >

	    <TextView
	        android:id="@+id/currentValueLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:gravity="center"
	        android:text="@string/currentValue"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/initValueLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:gravity="center"
	        android:text="@string/initValue"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	   	
	    <TextView
	        android:id="@+id/valueText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/currentValueLabel"
	        android:gravity="center"
	        android:text=""
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="40sp"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/initValueText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/initValueLabel"
	        android:gravity="center"
	        android:text=""
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="40sp"
	        android:textStyle="bold" />

	    <TextView
	        android:id="@+id/lastChangedLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/valueText"
	        android:gravity="center"
	        android:text="@string/lastChangedLabel"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/lastChangedText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/lastChangedLabel"
	        android:gravity="center"
	        android:text=""
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textSize="20sp"
	        android:textStyle="bold" />
	</RelativeLayout>
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"/>
    <Button
        android:id="@+id/refreshButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/refreshButton"
        android:onClick="refreshButton"/>
    <Button
        android:id="@+id/setButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/setNewValueButton"
        android:onClick="setButton"/>
    
</LinearLayout>
