<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp"
        android:textStyle="bold" />

	<View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:paddingBottom="200dp"
	    android:background="@android:color/darker_gray"/>
	<TextView 
	    android:id="@+id/addressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"/>
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="2"
	    >

	    <TextView
	        android:id="@+id/currentStateLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:gravity="center"
	        android:text="Current State"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/currentRawStateLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:gravity="center"
	        android:text="Current Raw State"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	   	
	    <TextView
	        android:id="@+id/valueText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/currentStateLabel"
	        android:gravity="center"
	        android:text=""
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="40sp"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/rawValueText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/currentRawStateLabel"
	        android:gravity="center"
	        android:text=""
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="40sp"
	        android:textStyle="bold" />

	</RelativeLayout>
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:layout_weight="3"/>
    <Button
        android:id="@+id/queryButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/queryButton"
        android:onClick="queryNode"/>
    <Button
        android:id="@+id/onButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/onButton"
        android:onClick="cmdNodeOn"/>
    <Button
        android:id="@+id/offButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/offButton"
        android:onClick="cmdNodeOff"/>
    
</LinearLayout>
</ScrollView>